Add loade, translations and improvement of some styles. Also refactor some functionality.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -325,6 +325,104 @@ en:
   password_change:
     instruction: We are contacting you to notify you that your password has been changed.
   profiles_controller:
+    skills_category:
+      sports_outdoor: "Outdoor"
+      sports_watersports: "Water"
+      sports_martial_arts: "Martial"
+      sports_gymnastics: "Gym"
+      sports_extreme: "Extreme"
+      sports_team: "Team"
+      sports_underwater: "Underwater"
+      arts_leisure_music: "Music"
+      arts_leisure_dance: "Dance"
+      arts_leisure_stunt_professions: "Stunt"
+      general: "General"
+    features:
+      sports_outdoor:
+        mountain_surf: "Mountain Surf"
+        running: "Running"
+        cycling: "Cycling"
+        snowboard: "Snowboard"
+        ski: "Ski"
+        climbing: "Climbing"
+        roller_skating: "Roller Skating"
+        skate: "Skateboard"
+        tennis: "Tennis"
+      sports_watersports:
+        diving: "Diving"
+        surf: "Surf"
+        paddle_surf: "Paddle Surf"
+        kite_surf: "Kite Surf"
+        wind_surf: "Wind Surf"
+        sail: "Sailing"
+      sports_martial_arts:
+        taekwondo: "Taekwondo"
+        karate: "Karate"
+        judo: "Judo"
+        jujitsu: "Jujitsu"
+        tai_chi: "Tai Chi"
+        aikido: "Aikido"
+        kendo: "Kendo"
+        kung_fu: "Kung Fu"
+        kickboxing: "Kickboxing"
+      sports_gymnastics:
+        aerobics: "Aerobics"
+        yoga: "Yoga"
+        fitness: "Fitness"
+        zumba: "Zumba"
+        boxing: "Boxing"
+        crossfit: "CrossFit"
+        acrogym: "Acrogymnastics"
+      sports_extreme:
+        parachuting: "Parachuting"
+        acrobatics: "Acrobatics"
+        freefall: "Freefall"
+        jump: "Jump"
+        ultra_light_flying: "Ultra-light Flying"
+        rafting: "Rafting"
+        speleology: "Speleology"
+        parkour: "Parkour"
+      sports_team:
+        football: "Football"
+        volleyball: "Volleyball"
+        baseball: "Baseball"
+        hockey: "Hockey"
+        basketball: "Basketball"
+      sports_underwater:
+        apnea: "Apnea"
+        diving: "Diving"
+        snorkel: "Snorkeling"
+      arts_leisure_music:
+        singing: "Singing"
+        piano: "Piano"
+        violin: "Violin"
+        violoncello: "Violoncello"
+        drums: "Drums"
+        guitar: "Guitar"
+        bass: "Bass"
+        flute: "Flute"
+      arts_leisure_dance:
+        hip_hop: "Hip Hop"
+        popping: "Popping"
+        break_dance: "Break Dance"
+        jazz: "Jazz"
+        ballet: "Ballet"
+        contemporary: "Contemporary"
+        voguing: "Voguing"
+        pole_dance: "Pole Dance"
+        dancehall: "Dancehall"
+        afrobeat: "Afrobeat"
+        flamenco: "Flamenco"
+      arts_leisure_stunt_professions:
+        precision_driver: "Precision Driver"
+        equilibrist: "Equilibrist"
+        cooking: "Cooking"
+      general:
+        acting: "Acting"
+        modeling: "Modeling"
+        music: "Music"
+        dancing: "Dancing"
+        sports: "Sports"
     age_range: "Age Range"
     height_range: "Height Range (cm)"
     shirt_size_range: "Shirt Size (cm)"
