--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -325,6 +325,104 @@ es:
   password_change:
     instruction: Nos estamos comunicando con usted para notificarle que su contraseña ha sido cambiada.
   profiles_controller:
+    skills_category:
+      sports_outdoor: "Aire libre"
+      sports_watersports: "Acuáticos"
+      sports_martial_arts: "Artes marciales"
+      sports_gymnastics: "Gimnasia"
+      sports_extreme: "Extremos"
+      sports_team: "Equipos"
+      sports_underwater: "Submarinos"
+      arts_leisure_music: "Música"
+      arts_leisure_dance: "Danza"
+      arts_leisure_stunt_professions: "Acrobacias"
+      general: "General"
+    features:
+      sports_outdoor:
+        mountain_surf: "Surf de montaña"
+        running: "Correr"
+        cycling: "Ciclismo"
+        snowboard: "Snowboard"
+        ski: "Esquí"
+        climbing: "Escalada"
+        roller_skating: "Patinaje sobre ruedas"
+        skate: "Skate"
+        tennis: "Tenis"
+      sports_watersports:
+        diving: "Buceo"
+        surf: "Surf"
+        paddle_surf: "Paddle surf"
+        kite_surf: "Kite surf"
+        wind_surf: "Windsurf"
+        sail: "Vela"
+      sports_martial_arts:
+        taekwondo: "Taekwondo"
+        karate: "Karate"
+        judo: "Judo"
+        jujitsu: "Jujitsu"
+        tai_chi: "Tai Chi"
+        aikido: "Aikido"
+        kendo: "Kendo"
+        kung_fu: "Kung Fu"
+        kickboxing: "Kickboxing"
+      sports_gymnastics:
+        aerobics: "Aeróbicos"
+        yoga: "Yoga"
+        fitness: "Fitness"
+        zumba: "Zumba"
+        boxing: "Boxeo"
+        crossfit: "Crossfit"
+        acrogym: "Acrogimnasia"
+      sports_extreme:
+        parachuting: "Paracaidismo"
+        acrobatics: "Acrobacias"
+        freefall: "Caída libre"
+        jump: "Salto"
+        ultra_light_flying: "Vuelo ultraligero"
+        rafting: "Rafting"
+        speleology: "Espeleología"
+        parkour: "Parkour"
+      sports_team:
+        football: "Fútbol"
+        volleyball: "Vóleibol"
+        baseball: "Béisbol"
+        hockey: "Hockey"
+        basketball: "Baloncesto"
+      sports_underwater:
+        apnea: "Apnea"
+        diving: "Buceo"
+        snorkel: "Snorkel"
+      arts_leisure_music:
+        singing: "Canto"
+        piano: "Piano"
+        violin: "Violín"
+        violoncello: "Violonchelo"
+        drums: "Batería"
+        guitar: "Guitarra"
+        bass: "Bajo"
+        flute: "Flauta"
+      arts_leisure_dance:
+        hip_hop: "Hip Hop"
+        popping: "Popping"
+        break_dance: "Break Dance"
+        jazz: "Jazz"
+        ballet: "Ballet"
+        contemporary: "Contemporáneo"
+        voguing: "Voguing"
+        pole_dance: "Pole Dance"
+        dancehall: "Dancehall"
+        afrobeat: "Afrobeat"
+        flamenco: "Flamenco"
+      arts_leisure_stunt_professions:
+        precision_driver: "Conductor de precisión"
+        equilibrist: "Equilibrista"
+        cooking: "Cocina"
+      general:
+        acting: "Actuación"
+        modeling: "Modelaje"
+        music: "Música"
+        dancing: "Baile"
+        sports: "Deportes"
     age_range: "Rango de Edad"
     height_range: "Rango de Altura (cm)"
     shirt_size_range: "Talla de Camiseta (cm)"
